docs-archive/apache-airflow-providers-amazon/8.20.0/_sources/_api/airflow/providers/amazon/aws/hooks/redshift_sql/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks.redshift_sql`
=========================================================

.. py:module:: airflow.providers.amazon.aws.hooks.redshift_sql


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.redshift_sql.RedshiftSQLHook




.. py:class:: RedshiftSQLHook(*args, aws_conn_id = 'aws_default', **kwargs)


   Bases: :py:obj:`airflow.providers.common.sql.hooks.sql.DbApiHook`

   Execute statements against Amazon Redshift.

   This hook requires the redshift_conn_id connection.

   Note: For AWS IAM authentication, use iam in the extra connection parameters
   and set it to true. Leave the password field empty. This will use the
   "aws_default" connection to get the temporary token unless you override
   with aws_conn_id when initializing the hook.
   The cluster-identifier is extracted from the beginning of
   the host field, so is optional. It can however be overridden in the extra field.
   extras example: ``{"iam":true}``

   :param redshift_conn_id: reference to
       :ref:`Amazon Redshift connection id<howto/connection:redshift>`

   .. note::
       get_sqlalchemy_engine() and get_uri() depend on sqlalchemy-amazon-redshift

   .. py:attribute:: conn_name_attr
      :value: 'redshift_conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'redshift_default'

      

   .. py:attribute:: conn_type
      :value: 'redshift'

      

   .. py:attribute:: hook_name
      :value: 'Amazon Redshift'

      

   .. py:attribute:: supports_autocommit
      :value: True

      

   .. py:method:: get_ui_field_behaviour()
      :classmethod:

      Get custom field behavior.


   .. py:method:: conn()


   .. py:method:: get_iam_token(conn)

      Retrieve a temporary password to connect to Redshift.

      Port is required. If none is provided, default is used for each service.


   .. py:method:: get_uri()

      Overridden to use the Redshift dialect as driver name.


   .. py:method:: get_sqlalchemy_engine(engine_kwargs=None)

      Overridden to pass Redshift-specific arguments.


   .. py:method:: get_table_primary_key(table, schema = 'public')

      Get the table's primary key.

      :param table: Name of the target table
      :param schema: Name of the target schema, public by default
      :return: Primary key columns list


   .. py:method:: get_conn()

      Get a ``redshift_connector.Connection`` object.


   .. py:method:: get_openlineage_database_info(connection)

      Return Redshift specific information for OpenLineage.


   .. py:method:: get_openlineage_database_dialect(connection)

      Return redshift dialect.


   .. py:method:: get_openlineage_default_schema()

      Return current schema. This is usually changed with ``SEARCH_PATH`` parameter.



